corrected whitespace error

--- a/app/assets/stylesheets/post.less
+++ b/app/assets/stylesheets/post.less
@@ -16,7 +16,7 @@ p {
 .post,
 .input-input,
 .input-submit {
-  border-color: @black;
+  border-color: @ink;
 }
 
 .post,
@@ -31,7 +31,7 @@ p {
 
 .meta {
   padding: 0.5em 1em;
-  border-bottom: 1px solid @black;
+  border-bottom: 1px solid @ink;
 
   * {
     display: inline-block;
@@ -84,7 +84,7 @@ p {
     top: 0;
     bottom: 0;
     margin: auto;
-    width: 1em;
+    /*width: 1em;*/
     height: 90%;
   }
 
@@ -162,7 +162,7 @@ p {
 .actions {
   margin-top: 1em;
   padding: 1em;
-  border-top: 2px solid @black;
+  border-top: 2px solid @ink;
   text-align: right;
 
   .advanced {
